--- a/templates/index.html
+++ b/templates/index.html
@@ -96,7 +96,7 @@
 						<img src="{% static 'assets/it_solutions.png' %}" style="margin: 20px 0px 30px 0px; max-height: 120px;" />
 						<h5 class="card-title">App Development</h5>
 						<p class="card-text">Windows, Android and IOS app development and free consultency.</p>
-						<a href="{% url 'appDev' %}" class="link">Read more</a>
+						<a href="" class="link">Read more</a>
 					</div>
 				</div>
 			</div>
