--- a/templates/index.html
+++ b/templates/index.html
@@ -108,7 +108,7 @@
 						<img src="{% static 'assets/web_designs.png' %}" style="margin: 20px 0px 30px 0px; max-height: 120px;" />
 						<h5 class="card-title">Web Development</h5>
 						<p class="card-text">Introducing Bleading Edge Technologies.</p>
-						<a href="{% url 'webDev' %}" class="link">Read more</a>
+						<a href="" class="link">Read more</a>
 					</div>
 				</div>
 			</div>
