--- a/templates/index.html
+++ b/templates/index.html
@@ -120,7 +120,7 @@
 						<img src="{% static 'assets/ux_ui.png' %}" style="margin: 20px 0px 30px 0px; max-height: 120px;" />
 						<h5 class="card-title">UX/UI Designing</h5>
 						<p class="card-text">UX/UI Design is Bridging the Gap Between Users and Technology.</p>
-						<a href="{% url 'uxui' %}" class="link">Read more</a>
+						<a href="" class="link">Read more</a>
 					</div>
 				</div>
 			</div>
