--- a/templates/index.html
+++ b/templates/index.html
@@ -269,7 +269,7 @@
 					<h6><i class="bi bi-browser-safari"></i> Web Developer</h6>
 				</div>
 
-				<a href="{% url 'team' %}">View all</a>
+				<a href="team.html">View all</a>
 
 		
 	    </div>
