--- a/templates/index.html
+++ b/templates/index.html
@@ -288,7 +288,7 @@
 						journey with you, bringing expertise, innovation, and cutting-edge
 						technology to the table.
 					</p>
-					<a href="{% url 'contact' %}" class="btn-md-green-secondary">
+					<a href="contact.html" class="btn-md-green-secondary">
 						<i class="bi-chat"> </i>
 						Contact Us
 					</a>
