--- a/templates/index.html
+++ b/templates/index.html
@@ -317,7 +317,7 @@
 					<h5>Useful Links</h5>
 					<ul class="list-unstyled lnk">
 						<li class="mb-2"><a href="{% url 'index' %}"><i class="bi-link"></i> Home</a></li>
-						<li class="mb-2"><a href="{% url 'team' %}"><i class="bi-link"></i> Our Team</a></li>
+						<li class="mb-2"><a href="team.html"><i class="bi-link"></i> Our Team</a></li>
 						<li class="mb-2"><a href="{% url 'about' %}"><i class="bi-link"></i> About us</a></li>
 						<li class="mb-2"><a href="{% url 'contact' %}"><i class="bi-link"></i> Contact us</a></li>
 						<li class="mb-2"><a href="{% url 'hiring' %}"><i class="bi-link"></i> Carrers</a></li>
