--- a/templates/index.html
+++ b/templates/index.html
@@ -28,9 +28,9 @@
 
 	<!-- SEO Optimization -->
 	<meta name="description"
-		content="CODE HUNT’S is a dedicated team of passionate developers based in Islamabad, Pakistan.">
-	<meta name="keywords" content="Software Company, codehunts, codehunt, code hunts, Code HUNT’S">
-	<meta name="author" content="Muhammad Naveed">
+		content="Kigali coding is a dedicated team of passionate developers based in kigali, Rwanda">
+	<meta name="keywords" content="Software Company, PC Select ltd">
+	<meta name="author" content="Musengimana Theogene">
 
 	<!-- logo -->
 	<link rel="icon" href="{% static 'assets/favicon.ico' %}">
