--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
 	<!-- SEO Optimization -->
 	<meta name="description"
 		content="Kigali coding is a dedicated team of passionate developers based in kigali, Rwanda">
-	<meta name="keywords" content="Software Company, PC Select ltd">
+	<meta name="keywords" content="Software Company, PC Select ltd, kigalicoding.com">
 	<meta name="author" content="Musengimana Theogene">
 
 	<!-- logo -->
