--- a/templates/contact.html
+++ b/templates/contact.html
@@ -25,9 +25,9 @@
 <link rel="stylesheet" href="{% static 'font/bootstrap-icons.css' %}">
 	<!-- SEO Optimization -->
 	<meta name="description"
-		content="CODE HUNT’S is a dedicated team of passionate developers based in Islamabad, Pakistan.">
-	<meta name="keywords" content="Software Company, codehunts, codehunt, bootstrap5, ">
-	<meta name="author" content="Muhammad Naveed">
+		content="Kigali coding is a dedicated team of passionate developers based in kigali, Rwanda">
+	<meta name="keywords" content="Software Company, PC Select ltd, kigalicoding.com">
+	<meta name="author" content="Musengimana Theogene">
 
 	<!-- logo -->
 	<link rel="icon" href="{% static 'assets/favicon.ico' %}">
